fix locale issue and git line ending issue